tests/NormalTests/paczka1/fuzzy1/86380938.err
Error in line 2: xc1tI7 A615 96,47
Error in line 3: Tu5u6rur S836 0,3
Error in line 8: 12RufGv A644 90,9
Error in line 11: QCQd7 S836 83,39
Error in line 17: 12RufGv S836 77,2
Error in line 20: xc1tI7 A615 411,9
